[package]
name = "hydra-cli"
version = "0.1.0"
authors = ["Antoine Eiche <lewo@abesis.fr>", "Tobias Pflug <tobias.pflug@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.31.2"
serde_derive = "1.0.92"
reqwest = "0.9.18"
serde_json = "1.0.39"
serde = "1.0.92"
chrono = "0.4.6"
log = "0.4.6"
prettytable-rs = "0.8.0"
mockito = "0.20.0"
