[package]
name = "hydra-cli"
version = "0.2.0"
authors = ["Antoine Eiche <lewo@abesis.fr>", "Tobias Pflug <tobias.pflug@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.10.8", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
log = "0.4.11"
prettytable-rs = "0.8.0"
mockito = "0.27.0"
